# RestGPT

./: .gitignore  config.yaml.example  init_spotify.py  pyproject.toml  run.py  run_dadjoke.py  run_spotify.py  run_tmdb.py  setup.sh
datasets/: dadjoke.json
model/: api_selector.py  caller.py  parser.py  planner.py  rest_gpt.py
site/: _config.yml
site/_posts/: 2024-06-07-welcome-to-jekyll.markdown
specs/: dadjoke_oas.json
utils/: utils.py
